# desktop-ai-job-runtime-contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: adapter_contract.md  architecture.md  architecture_diagram_v4.md  architecture_v2_stable.md  architecture_v3.md  architecture_visual_v4.md  computational_model.md  design_principles_v4.md  examples.md  execution_trace.md  export_guard.md  invariants.md  job_manifest.md  maintainer_workflow.md  maintenance_roadmap.md  paradigm_comparison.md  quick_start_v4.md  specification_overview.md  system_overview_v4.md
docs/releases/: v0.1.0.md
examples/: fake_audio_job.json  fake_image_job.json  fake_text_job.json  run_fake_job.py
src/desktop_ai_job_runtime_contracts/: __init__.py  adapter.py  contract_spec.py  contracts.py  execution_graph.py  export_guard.py  manifest.py  runner.py  trace.py
src/desktop_ai_job_runtime_contracts/specs/: runtime_spec_v3.py  schema_v3.json
tests/: test_adapter.py  test_examples.py  test_export_guard.py  test_manifest.py  test_trace.py  test_v2_stable_graph.py  test_v3_spec.py
